# web-practice

./: .gitignore  README.md  achievements.json  achievements_state.json  pyproject.toml  requirements.txt
apps/: forms.py  models.py  task.py  views.py
apps/templates/: dashboard.html  login.html
apps/utils/: achievement.py  kuro_api.py
apps/utils/api/: api.py  kuro_function.py
blog/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
mysite/: celery.py  settings.py  urls.py
static/: blog_nav.css
static/json/: character.json  get_image.json
templates/: achievement_record.html  blog_aside.html  blog_index.html  blog_manage.html  blog_nav.html  create_post.html  dashboard.html  gacha.html  gacha_history_viewer.html  login.html  nav.html  post_detail.html  register.html  restaurant_finder.html  update_post.html
